--- a/Areas/Admin/Views/DangKyXetTuyens/DkxtkqKhac_hs_view.cshtml
+++ b/Areas/Admin/Views/DangKyXetTuyens/DkxtkqKhac_hs_view.cshtml
@@ -618,6 +618,7 @@
     </div>
 </div>
 <input type="hidden" id="hidden_Dkxt_ID" value="@ViewBag.Dkxt_ID" />
+<input type="hidden" id="hidden_Ptxt_ID" value="@ViewBag.Ptxt_ID" />
 <script>
     $(document).ready(function () {
         let data_get = { Dkxt_ID: $('#hidden_Dkxt_ID').val() }
@@ -829,9 +830,15 @@
     })   
     function ReturnTheoDoiNopHoSoDetail() {
         var str_query_current = window.location.search;
-        var str_dkxt_id = '?Dkxt_ID=' + $('#hidden_Dkxt_ID').val();
+        var str_dkxt_id = '?Dkxt_ID=' + $('#hidden_Dkxt_ID').val() + '&Ptxt_ID=' + $('#hidden_Ptxt_ID').val();
         var str_query = str_query_current.slice(0, str_query_current.length - str_dkxt_id.length);
-        window.location.href = '/Admin/TongHopSoLieuDKXTs/TheoDoiNopHoSo' + str_query;
+
+        if ($('#hidden_Ptxt_ID').val() == 5) {
+            window.location.href = '/Admin/DangKyXetTuyens/DkxtkqCcnn/' + str_query;
+        }
+        else if ($('#hidden_Ptxt_ID').val() == 6) {
+            window.location.href = '/Admin/DangKyXetTuyens/DkxtkqDgnl/' + str_query;
+        }
     }
 
     function showimg(url, loaimc, id_key_hv_dutuyen) {
