--- a/Areas/Admin/Views/AdminAccounts/Index.cshtml
+++ b/Areas/Admin/Views/AdminAccounts/Index.cshtml
@@ -37,76 +37,98 @@
                     <a class="btn btn-outline-primary btn-sm align-items-center" href="@Url.Action("Create", "AdminAccounts")"> + Thêm mới</a>
 
                 </div> <div class="card-body">
-                    <div class="row g-1">
-                        <div class="col-lg-12 col-12">
-                            <div class="table-responsive">
-                                <table class="table table-striped table-hover">
-                                    <tr>
-                                        <th>
-                                            Tài khoản
-                                        </th>
-                                        <th>
-                                            Họ
-                                        </th>
-                                        <th>
-                                            Tên
-                                        </th>
-                                        <th>
-                                            Quyền
-                                        </th>
-                                        <th>
-                                            Ghi chú
-                                        </th>
-                                        <th>
+                           <div class="row g-1">
 
-                                        </th>
-                                    </tr>
+                               @*<div class="col-xxl-2 col-md-12">
+            <select class="form-select">
+                <option>Chọn Quyền...</option>
+            </select>
+            @Html.DropDownList("filteriQuyen", null, "Quyền", new { @class = "form-select" })
+        </div>*@
+                               @using (Html.BeginForm("Index", "AdminAccounts", FormMethod.Get)) // -- phần thay đổi
+                               {
+                                   <div class="col-xxl-2 col-md-12">
+                                       @Html.TextBox("searchString", ViewBag.SearchString as string, new { @class = "form-control", @placeholder = "Nhập từ khóa..." })
+                                   </div>
+                                   <div class="col-xxl-2 col-lg-12">
+                                       <div class="d-inline-flex flex-nowrap align-items-center">
+                                           <input class="btn btn-outline-primary style="margin-right:4px" type="submit" value="Lọc" />
+                                       </div>
+                                   </div>
+                               }
 
-                                    @foreach (var item in Model)
-                                    {
-                                        <tr>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.Admin_Username)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.Admin_Ho)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.Admin_Ten)
-                                            </td>
-                                            <td>
-                                                @{
-                                                    if (item.Admin_Quyen == "1")
-                                                    { <div> Quản lý Đại học </div> }
-                                                    if (item.Admin_Quyen == "2")
-                                                    {<div>  Quản lý Sau Đại học </div> }
-                                                    if (item.Admin_Quyen == "3")
-                                                    { <div>  Quản lý Liên cấp </div>}
-                                                    if (item.Admin_Quyen == "4")
-                                                    { <div>  Quản lý Thi năng khiếu</div> }
-                                                }
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.Admin_Note)
-                                            </td>
-                                            <td style="white-space:nowrap; vertical-align:middle">
-                                                <a href="@Url.Action("Edit", "AdminAccounts", new { id = item.Admin_ID })" title="Xem chi tiết "><i data-feather="edit" style="vertical-align: middle !important "></i></a> |
-                                                <a href="@Url.Action("Delete", "AdminAccounts", new { id = item.Admin_ID })" title="Xóa"><i data-feather="trash-2" style="vertical-align:middle!important" disable></i></a>
-                                            </td>
-                                        </tr>
-                                    }
+                               <hr class="mt-3 mb-2" />
+                           </div>
+    <div class="row g-1">
+        <div class="col-lg-12 col-12">
+            <div class="table-responsive">
+                <table class="table table-striped table-hover">
+                    <tr>
+                        <th>
+                            Tài khoản
+                        </th>
+                        <th>
+                            Họ
+                        </th>
+                        <th>
+                            Tên
+                        </th>
+                        <th>
+                            Quyền
+                        </th>
+                        <th>
+                            Ghi chú
+                        </th>
+                        <th>
+
+                        </th>
+                    </tr>
+
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Admin_Username)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Admin_Ho)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Admin_Ten)
+                            </td>
+                            <td>
+                                @{
+                                    if (item.Admin_Quyen == "1")
+                                    { <div> Quản lý Đại học </div> }
+                                    if (item.Admin_Quyen == "2")
+                                    {<div>  Quản lý Sau Đại học </div> }
+                                    if (item.Admin_Quyen == "3")
+                                    { <div>  Quản lý Liên cấp </div>}
+                                    if (item.Admin_Quyen == "4")
+                                    { <div>  Quản lý Thi năng khiếu</div> }
+                                }
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Admin_Note)
+                            </td>
+                            <td style="white-space:nowrap; vertical-align:middle">
+                                <a href="@Url.Action("Edit", "AdminAccounts", new { id = item.Admin_ID })" title="Xem chi tiết "><i data-feather="edit" style="vertical-align: middle !important "></i></a> |
+                                <a href="@Url.Action("Delete", "AdminAccounts", new { id = item.Admin_ID })" title="Xóa"><i data-feather="trash-2" style="vertical-align:middle!important" disable></i></a>
+                            </td>
+                        </tr>
+                    }
 
 
 
-                                </table>
-                                <!-- Thêm mã phân trang -->
-                                <span class="mb-0">Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / @Model.PageCount</span>
-                                @Html.PagedListPager(Model, page => Url.Action("Index", new { page }))
-                                <!-- Kết thúc -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                </table>
+                <!-- Thêm mã phân trang -->
+                <span class="mb-0">Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / @Model.PageCount</span>
+                @Html.PagedListPager(Model, page => Url.Action("Index", new { searchString = ViewBag.SearchString, page }))
+                <!-- Kết thúc -->
+            </div>
+        </div>
+    </div>
+</div>
             </div>
         </div>
 
